src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwU-dhU-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    default-column-width {  }\n    default-window-height {  }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 0 × 688, bounds: 1248 × 688, states: []
size: 1 × 688, bounds: 1248 × 688, states: [Activated]
